<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.practice.tipcalculator.CalculationActivity">

    <!--Entering initial costs of bill-->
     <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header1"
        android:textAlignment="center"
        android:text="@string/header1"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header1"
        android:layout_centerHorizontal="true"
        android:id="@+id/originalBill"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        android:hint="@string/bill_cost"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <!--Entering the tip percentage -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header2"
        android:textAlignment="center"
        android:text="@string/header2"
        android:layout_below="@+id/originalBill"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header2"
        android:layout_above="@+id/numOfPeople"
        android:id="@+id/tipPercentage"
        android:textAlignment="center"
        android:layout_toLeftOf="@+id/increaseTip"
        android:layout_toRightOf="@+id/decreaseTip"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="15%"
        android:elevation="12dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/decreaseTip"
        android:text="@string/decrease"
        android:layout_below="@+id/header2"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/increaseTip"
        android:text="@string/increase"
        android:layout_below="@+id/header2"
        android:layout_alignParentEnd="true" />

    <!--Adding number of people to split the bill with -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/numOfPeople"
        android:textAlignment="center"
        android:text="@string/numOfPeople"
        android:layout_below="@+id/decreaseTip"
        android:layout_alignLeft="@+id/totalTip"
        android:layout_alignStart="@+id/totalTip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/numOfPeople"
        android:layout_above="@+id/tipValue"
        android:id="@+id/numPeople"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_toLeftOf="@+id/increasePeople"
        android:layout_toRightOf="@+id/decreasePeople"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:textSize="20sp"
        android:text="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/decreasePeople"
        android:text="@string/decrease"
        android:layout_below="@+id/numOfPeople"
        android:layout_alignParentLeft="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/increasePeople"
        android:text="@string/increase"
        android:layout_below="@+id/numOfPeople"
        android:layout_alignParentRight="true" />

    <!--Calculated tip value-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/decreasePeople"
        android:id="@+id/tipValue"
        android:textAlignment="center"
        android:text="@string/tipValue"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/totalTip"
        android:textAlignment="center"
        android:text="@string/default_tip"
        android:textStyle="italic"
        android:textSize="30sp"
        android:layout_below="@+id/tipValue" />

    <!--Calculated bill value-->
    <!--NEED TO ADD A LABEL FOR THIS-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/totalTip"
        android:id="@+id/billValue"
        android:textAlignment="center"
        android:text="@string/billValue"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/totalBill"
        android:layout_below="@id/billValue"
        android:textAlignment="center"
        android:text="@string/default_bill"
        android:textStyle="italic"
        android:textSize="30sp"/>

    <!--NEED TO ADD A CALCULATED VALUE FOR BILL PER PERSON-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/totalBill"
        android:id="@+id/perPerson"
        android:textAlignment="center"
        android:text="@string/perPerson"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/perPersonValue"
        android:layout_below="@id/perPerson"
        android:textAlignment="center"
        android:text="@string/default_perPerson"
        android:textStyle="italic"
        android:textSize="30sp"/>



</RelativeLayout>
